# generative-eda

./: README.md  SUMMARY.md
docs/: chapter1.md
genEDA/: .gitignore  README.md  pyproject.toml  test-RP2040.sh  test-RaspberryPico.sh  test.sh
genEDA/geneda/: genEDA.py
genEDA/geneda/Circuits/Modules/: Teensy41.py
genEDA/geneda/Devices/MCU/: MIMXRT1062.py  RP2040.py
genEDA/src/: genEDA.py
genEDA/src/Circuits/Modules/: RaspberryPico.py  WeAct_RP2040_Pico.py
genEDA/src/Devices/MCU/: RP2040.py
genEDA/src/genEDA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
genEDA/tests/: test-RP2040.py  test-RaspberryPico.py  test-pyspice.py  test.py
