[tool.poetry]
name = "genEDA"
version = "0.1.0"
description = "genEDA a Generative EDA (Electronic Design Automation) package"
authors = ["Pawel Wodnicki <pawel.wodnicki@live.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
